--- a/src/view/Band.form
+++ b/src/view/Band.form
@@ -139,7 +139,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Username"/>
+        <Property name="text" type="java.lang.String" value="NickName"/>
       </Properties>
     </Component>
   </SubComponents>
